Fixed CSS inconsistency. Subtitle jumping on page refresh

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,6 @@ header {
 /**
  * Did this to improve UX. Images were getting pushed down by the new font
  */
-.fixedHeightHack {
+.AC-fixedHeightHack {
 	height: 55px;
 }
